small changes to Numpy tutorial

--- a/B01_numpy.ipynb
+++ b/B01_numpy.ipynb
@@ -470,129 +470,7 @@
     "## 17\n",
     "As stated above Numpy computes element by element when evaluating mathematical expressions.  When the arrays are different sizes this presents a problem as the elements don't match.  To get round this Numpy uses broadcasting.  \n",
     "\n",
-    "Broadcasting is a technique where arrays are expanded to a common size.  In the following example we are multiplying two arrays:<pre>X.shape = (6,)\n",
-    "Y.shape = (4, 1)</pre>\n",
-    "\n",
-    "Numpy works out that it needs to expand both arrays to have<pre>\n",
-    "X.shape = (4, 6)\n",
-    "Y.shape = (4, 6)</pre>\n",
-    "before it can compute `X * Y` element by element, so it broadcast each array as necessary.  \n",
-    "\n",
-    "Broadcasting is discussed in more detail in the next cell."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "X = np.arange(1,7)\n",
-    "Y = np.arange(1,5)\n",
-    "print(\"X and Y are 1D arrays\")\n",
-    "print(X)\n",
-    "print(Y)\n",
-    "\n",
-    "Y = np.vstack(Y)\n",
-    "print(\"\\nY is now a 2D array\")\n",
-    "print(Y)\n",
-    "print(\"\\nX is still a 1D array\")\n",
-    "print(X)\n",
-    "print(\"\\nbroadcast X and Y, because arrays are different sizes\")\n",
-    "Z = X * Y \n",
-    "print(f\"Z = \\n{Z}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 18\n",
-    "With broacasting Numpy first works out the shape of the expanded array and then fills in the new elements with copies of the siblings.  In the above example X is broadcast horizontally and Y is broadcast vertically.\n",
-    "\n",
-    "To see the actual arrays after they have been broadcast, I've simulated broadcasting in the following code:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "X = np.arange(1,7)\n",
-    "Y = np.arange(1,5)\n",
-    "Y = np.vstack(Y)\n",
-    "print(f\"X before broadcasting\\n{X}\\n\")\n",
-    "print(f\"Y before broadcasting\\n{Y}\\n\")\n",
-    "\n",
-    "broadcastX = np.vstack((X,)*4)\n",
-    "broadcastY = np.hstack((Y,)*6)\n",
-    "print(f\"X after broadcasting\\n{broadcastX}\\n\")\n",
-    "print(f\"Y after broadcasting\\n{broadcastY}\\n\")\n",
-    "\n",
-    "print(f\"X*Y after broadcasting\\n{broadcastX * broadcastY}\\n\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 19\n",
-    "Broadcasting is very useful when it comes to surface plots.  In the above example if you think about a 3 dimensional space, in the XY plane coordinates of points will be\n",
-    "<pre>(1, 1), (1, 2), (1, 3), (1, 4), \n",
-    "(2, 1), (2, 2), (2, 3), (2, 4), \n",
-    "(3, 1), (3, 2), (3, 3), (3, 4), \n",
-    "(4, 1), (4, 2), (4, 3), (4, 4), \n",
-    "(5, 1), (5, 2), (5, 3), (5, 4), \n",
-    "(6, 1), (6, 2), (6, 3), (6, 4)</pre>\n",
-    "\n",
-    "If we extract the first item in each tuple we obtain\n",
-    "<pre>(1, ), (1, ), (1, ), (1, ), \n",
-    "(2, ), (2, ), (2, ), (2, ), \n",
-    "(3, ), (3, ), (3, ), (3, ), \n",
-    "(4, ), (4, ), (4, ), (4, ), \n",
-    "(5, ), (5, ), (5, ), (5, ), \n",
-    "(6, ), (6, ), (6, ), (6, )</pre>\n",
-    "and this is just Y after broadcasting.  \n",
-    "\n",
-    "Similarly, if we extract the second item in each tuple we get \n",
-    "<pre>(, 1), (, 2), (, 3), (, 4), \n",
-    "(, 1), (, 2), (, 3), (, 4), \n",
-    "(, 1), (, 2), (, 3), (, 4), \n",
-    "(, 1), (, 2), (, 3), (, 4), \n",
-    "(, 1), (, 2), (, 3), (, 4), \n",
-    "(, 1), (, 2), (, 3), (, 4)</pre>\n",
-    "which is just X after broadcasting.  \n",
-    "\n",
-    "In a surface plot Z is a function of X and Y, so computing `Z = X * Y` element by element computes the surface at all X,Y points.\n",
-    "\n",
-    "It is instructive to see how this works for a more complex example.  We will use MatPlotLib to display our results.  I've chosen the formula `Z = Y * cos(X)` as it leads to a more interesting surface plot.  The broadcast arrays for X and Y in this example will have the shape (800, 800).  That's 640, 000 points in the surface!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from mpl_toolkits.mplot3d import axes3d, Axes3D\n",
-    "\n",
-    "A = np.arange(2, 10, 0.01)\n",
-    "X = np.hstack(A)\n",
-    "Y = np.vstack(A)\n",
-    "\n",
-    "Z = Y * np.cos(X)\n",
-    "fig = plt.figure()\n",
-    "ax = Axes3D(fig)\n",
-    "surface = ax.plot_surface(X, Y, Z, cmap=\"terrain\", rstride = 25, cstride = 5)\n",
-    "plt.show()"
+    "Consult the separate tutorial on broadcasting for the details."
    ]
   }
  ],
