small changes to Numpy tutorial

--- a/B01_numpy_broadcasting.ipynb
+++ b/B01_numpy_broadcasting.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "<div style=\"color:red;background-color:black\">\n",
     "Diamond Light Source\n",
-    "<br style=\"color:red;background-color:antiquewhite\"><h1>Python Libraries: Numpy</h1>  \n",
+    "<br style=\"color:red;background-color:antiquewhite\"><h1>Python Libraries: Numpy Broadcasting</h1>  \n",
     "\n",
     "©2000-20 Chris Seddon \n",
     "</div>"
