--- a/B01_numpy_broadcasting.ipynb
+++ b/B01_numpy_broadcasting.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "source": [
     "## 1\n",
-    "Numpy uses **broadcasting** when arrays are different sozes.  Let's work through an example of creating a surface plot that utilises Numpy's **broadcasting**.\n",
+    "Numpy uses **broadcasting** when arrays are different sizes.  Let's work through an example of creating a surface plot that utilises Numpy's **broadcasting**.\n",
     "\n",
     "Consider the following simple arrays:"
    ]
@@ -48,9 +48,9 @@
    "metadata": {},
    "source": [
     "## 2\n",
-    "We are going to create a surface plot of a function dependent on variables X and Y.\n",
+    "We are going to create a surface plot of a function dependent on these variables X and Y.\n",
     "\n",
-    "The X variable ranges between 1 and 6 and the Y variable between 1 and 4. This means we will have 6 * 4 = 24 points in the XY plane:"
+    "The X variable ranges between 1 and 6 and the Y variable between 1 and 4. This means we will have 6 * 4 = 24 points in the xy plane:"
    ]
   },
   {
@@ -84,9 +84,11 @@
     "\n",
     "We will use **matplotlib** to perform the surface plot.  The plot function we will use is as follows:\n",
     "\n",
-    "* ax.plot(X, Y, format)\n",
+    "* ax.plot_surface(X, Y, Z, cmap)\n",
     "\n",
     "The X and Y parameters must both be 2 dimensional arrays that encompass all points in the xy plane that we wish to use in our surface plot.  In our case that's the 24 points shown above.\n",
+    "\n",
+    "The Z values will be computed from the X an Y arrays for each of our 24 points.  The colormap is used to give artificial colors to the surface to make it easier to see.\n",
     "\n",
     "The X array has to contain the values of x for each of the 24 points:"
    ]
@@ -229,7 +231,7 @@
    "metadata": {},
    "source": [
     "## 9\n",
-    "Noe Numpy can perform element by element calculations on these arrays.  Suppose we want to compute the squares of x and y:"
+    "Now Numpy can perform element by element calculations on these arrays.  Suppose we want to compute the squares of x+y:"
    ]
   },
   {
@@ -247,7 +249,7 @@
    "metadata": {},
    "source": [
     "## 10\n",
-    "In practice, broadcasting is implicit (we don't need to use meshgrid):"
+    "In practice, broadcasting is implicit (we don't need to use **meshgrid**):"
    ]
   },
   {
@@ -281,7 +283,8 @@
     "fig = plt.figure()\n",
     "ax = fig.gca(projection='3d')\n",
     "\n",
-    "ax.plot_surface(XX, YY, Z, cmap=cm.coolwarm)"
+    "ax.plot_surface(XX, YY, Z, cmap=cm.coolwarm)\n",
+    "plt.show()"
    ]
   },
   {
