updated first tutorial

--- a/A01_types.ipynb
+++ b/A01_types.ipynb
@@ -66,7 +66,7 @@
     "\n",
     "100 is an `int` object, `5.841` is a float object, `'hello'` and `\"hello\"` are a string objects (you can use either single or double quotes for strings).\n",
     "\n",
-    "The [] indicates a list object and the round braclets a tuple.  List and tuples are essentially arrays; a tuple is read only (immutable) and a list is read/write (muable)."
+    "The [ ] indicates a list object and the round brackets a tuple.  List and tuples are essentially arrays; a tuple is read only (immutable) and a list is read/write (muable)."
    ]
   },
   {
@@ -96,14 +96,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5\n",
+    "It issential to realise that variables in Python are really pointers (officially: Object References).  \n",
+    "\n",
+    "In the following example we create a list pointed at by the variable <b>x</b>.  We then point <b>y</b> to the same place.  When we change the list through <b>x</b>, the changs are seen by <b>y</b>."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "x = [10, 20, 30, 40]\n",
+    "y = x\n",
     "x.append(99)\n",
-    "print(x)"
+    "print(x)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6\n",
+    "\n",
+    "Let's see another diagram:\n",
+    "<img src='resources/images/Slide14.jpg'>\n",
+    "Since <b>x</b> and <b>y</b> are pointing to the same object they both see the change.\n",
+    "\n",
+    "Now try this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 100\n",
+    "y = x\n",
+    "x = x + 1\n",
+    "print(x)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7\n",
+    "What's happening here.  Although <b>x</b> and <b>y</b> are pointing to the same object only <b>x</b> sees the change.\n",
+    "\n",
+    "That's very confusing.  For an explanation you'll need to study the next tutorial: <b>Mutability</b>\n"
    ]
   }
  ],
