--- a/A04_lists_and_tuples.ipynb
+++ b/A04_lists_and_tuples.ipynb
@@ -219,7 +219,7 @@
    "source": [
     "## 9\n",
     "Perhaps a diagram will make things clearer.  Each box is a pointer and the rounded boxes are objects (lists and tuples).  I've colored the immutable pointers and objects in red; mutable items are in green.  \n",
-    "![title](images/Slide1.jpg)\n",
+    "![title](resources/images/Slide01.jpg)\n",
     "\n",
     "For the rest of this tutorial we will concentrate on lists.  If we take the structure above and change the tuple to a list we get a two dimensional list:"
    ]
