--- a/A07_modules.ipynb
+++ b/A07_modules.ipynb
@@ -231,7 +231,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.insert(0, \"libs\")\n",
+    "sys.path.insert(0, \"resources/libs\")\n",
     "\n",
     "import mylib\n",
     "mylib.f1()\n",
@@ -247,7 +247,7 @@
     "## 8\n",
     "The following diagram shows what is happening in memory.  Each file has a symbol table that is a dictionary of all the global symbols in the file.  The \"mylib\" module has 4 global symbols: each of the function pointers.  Our code has only one global symbol (in the import statement): \"mylib\"\n",
     "\n",
-    "<img src=\"resources/images/Slide6.jpg\"/>\n",
+    "<img src=\"resources/images/Slide06.jpg\"/>\n",
     "\n",
     "f.o. stands for function object."
    ]
@@ -280,7 +280,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.insert(0, \"libs\")\n",
+    "sys.path.insert(0, \"resources/libs\")\n",
     "\n",
     "import mylib as m\n",
     "m.f1()\n",
@@ -300,7 +300,7 @@
     "## 10\n",
     "The alias modifies our diagram slightly.  Our symbol table now contains \"m\" rather than \"mylib\":\n",
     "\n",
-    "<img src=\"resources/images/Slide7.jpg\"/>"
+    "<img src=\"resources/images/Slide07.jpg\"/>"
    ]
   },
   {
@@ -328,7 +328,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.insert(0, \"libs\")\n",
+    "sys.path.insert(0, \"resources/libs\")\n",
     "\n",
     "from mylib import *\n",
     "f1()\n",
@@ -342,14 +342,9 @@
    "metadata": {},
    "source": [
     "## 12\n",
-    "The memory diagram now looks like:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"margin-top: -10%;margin-bottom: -15%;display:block\"><img src=\"resources/images/Slide8.jpg\"/></div>"
+    "The memory diagram now looks like:\n",
+    "\n",
+    "<img src=\"resources/images/Slide08.jpg\"/>"
    ]
   },
   {
@@ -391,7 +386,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.insert(0, \"libs\")\n",
+    "sys.path.insert(0, \"resources/libs\")\n",
     "\n",
     "from mylib import f1, f2, f3, f4\n",
     "\n",
@@ -418,7 +413,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.insert(0, \"libs\")\n",
+    "sys.path.insert(0, \"resources/libs\")\n",
     "\n",
     "def f1():\n",
     "    print(\"local f1\")\n",
@@ -445,7 +440,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.insert(0, \"libs\")\n",
+    "sys.path.insert(0, \"resources/libs\")\n",
     "\n",
     "def f1():\n",
     "    print(\"local f1\")\n",
