--- a/A08_classes.ipynb
+++ b/A08_classes.ipynb
@@ -20,7 +20,7 @@
     "In this tutorial we will create a single class called Point; we will use this class to create 3 Point objects.  \n",
     "Each of the Point objects will be able to move around a screen:\n",
     "\n",
-    "<img src=\"resources/images/Slide3.jpg\"/>\n",
+    "<img src=\"resources/images/Slide03.jpg\"/>\n",
     "\n",
     "We will define the class with 3 functions (common parlance is to call these functions \"methods\"):\n",
     "* initialize\n",
@@ -313,7 +313,7 @@
     "The \"\\__dict__\" pointers point directly at the class and object's dictionaries.  \n",
     "The \"\\__class__\" pointer links the object to its class.\n",
     "\n",
-    "<img src=\"resources/images/Slide4.jpg\"/>"
+    "<img src=\"resources/images/Slide04.jpg\"/>"
    ]
   },
   {
@@ -559,7 +559,7 @@
     "Note that this time the method is interacting with the class dictionary, so it would be wrong to use \"self\".  This is about the only time a method doesn't have \"self\" as its first parameter.\n",
     "\n",
     "Now for the final diagram and the full code:\n",
-    "<img src=\"resources/images/Slide5.jpg\"/>"
+    "<img src=\"resources/images/Slide05.jpg\"/>"
    ]
   },
   {
