added shallow copy diagram

--- a/A09_file_IO.ipynb
+++ b/A09_file_IO.ipynb
@@ -19,7 +19,7 @@
     "## 1\n",
     "Q. How do we read from a file in Python?  Well, Python builds a thin wraper around the C programming language support.  This wrapper is fairly easy to use.\n",
     "\n",
-    "To begin with, we need to differentiate between text and binary files.  Technically, in Red Hat Unix, there is no real distinction between these types, but the distinction is much more important in Windows.  However, Python handles text and binary files differently.\n",
+    "To begin with, we need to differentiate between text and binary files.  Technically, in Unix, there is no real distinction between these types, but the distinction is much more important in Windows.  In view of this, Python treats text and binary files differently.\n",
     "\n",
     "Let's begin with reading a text file:"
    ]
@@ -393,7 +393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
