--- a/A08_classes.ipynb
+++ b/A08_classes.ipynb
@@ -140,13 +140,55 @@
    "metadata": {},
    "source": [
     "## 5\n",
-    "Well that seems to work, so now we are ready to add code to \"initialize\".  The code must take the 3 inputs \"x0\", \"y0\" and \"name\" and copy them into the object's dictionary pointed at by \"self\".  The 3 entries in the dictionary will be:\n",
+    "Well, that seems to work, so now we are almost ready to add code to \"initialize\".  However, the code above is usually rewitten in an equivalent form:\n",
+    "\n",
+    "<pre>Point.initialize(p1, 100, 150, 'point-p1')\n",
+    "Point.initialize(p2, 400, 450, 'point-p2')\n",
+    "Point.initialize(p3, 250, 750, 'point-p3')\n",
+    "</pre>\n",
+    "\n",
+    "can be replaced by\n",
+    "<pre>p1.initialize(100, 150, 'point-p1')\n",
+    "p2.initialize(400, 450, 'point-p2')\n",
+    "p3.initialize(250, 750, 'point-p3')\n",
+    "</pre>\n",
+    "This is just syntax sugar.  The first parameter to the `initialize` method has been move to the front of the method and replaces the class name.  This doesn't affect anything, but is the convential way to write object oriented code.  We' ll use this form from now on."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class Point:\n",
+    "    def initialize(self, x0, y0, name):\n",
+    "        pass\n",
+    "\n",
+    "p1 = Point()\n",
+    "p2 = Point()\n",
+    "p3 = Point()\n",
+    "Point.initialize(p1, 100, 150, 'point-p1')\n",
+    "Point.initialize(p2, 400, 450, 'point-p2')\n",
+    "Point.initialize(p3, 250, 750, 'point-p3')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5\n",
+    "Well, that seems to work, so now we are almost ready to add code to \"initialize\".  The code must take the 3 inputs \"x0\", \"y0\" and \"name\" and copy them into the object's dictionary pointed at by \"self\".  The 3 entries in the dictionary will be:\n",
     "\n",
     "<pre>self.x\n",
     "self.y\n",
     "self.name</pre>\n",
     "\n",
-    "Realize \"x0\", \"y0\" and \"name\" are local variables and will be deleted at the end of the \"initialize\" method.  The copies will be stored safely in the object's dictionary and will not get deleted.  In fact the object's dictionary stays alive while there exists a pointer to the dictionary.  Precisely what \"p1\", \"p2\" and \"p3\" are achieving."
+    "Realize \"x0\", \"y0\" and \"name\" are local variables and will be deleted at the end of the \"initialize\" method.  The copies will be stored safely in the object's dictionary and will not get deleted.  In fact the object's dictionary stays alive while there exists a pointer to the dictionary; \"p1\", \"p2\" and \"p3\" are pointing at the three dictionaries."
    ]
   },
   {
@@ -611,7 +653,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
