--- a/A08_classes.ipynb
+++ b/A08_classes.ipynb
@@ -172,9 +172,9 @@
     "p1 = Point()\n",
     "p2 = Point()\n",
     "p3 = Point()\n",
-    "Point.initialize(p1, 100, 150, 'point-p1')\n",
-    "Point.initialize(p2, 400, 450, 'point-p2')\n",
-    "Point.initialize(p3, 250, 750, 'point-p3')"
+    "p1.initialize(100, 150, 'point-p1')\n",
+    "p2.initialize(400, 450, 'point-p2')\n",
+    "p3.initialize(250, 750, 'point-p3')"
    ]
   },
   {
